--- a/standalone-chat/pom.xml
+++ b/standalone-chat/pom.xml
@@ -11,4 +11,17 @@
 
     <artifactId>standalone-chat</artifactId>
 
+    <properties>
+        <maven.compiler.source>1.11</maven.compiler.source>
+        <maven.compiler.target>1.11</maven.compiler.target>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>LATEST</version>
+        </dependency>
+    </dependencies>
+
 </project>
